src/objects/Daily_Footfall__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch_Documents__c</referenceTo>
        <relationshipName>Daily_Footalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keyed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Footalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_customers__c</fullName>
        <label>Number of customers</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Daily Prospect Footfall</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Number_of_customers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Daily_PF</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Date__c</columns>
        <columns>Number_of_customers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>knightsbridge</value>
        </filters>
        <label>Daily PF</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DF-{0000}</displayFormat>
        <label>Daily Footfall Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Prospect Footfalls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>